--- a/src/pages/SignUp/SignupPage.css
+++ b/src/pages/SignUp/SignupPage.css
@@ -84,7 +84,7 @@
 }
 
 .signup-box h2 {
-  color: #2563eb; 
+  color: hsl(221, 83%, 53%); 
   text-align: center;
   font-weight: 600;
   margin-bottom: 1.5rem;
