--- a/src/pages/Login/LoginPage.css
+++ b/src/pages/Login/LoginPage.css
@@ -7,17 +7,6 @@
   position: relative;
 }
 
-.login-container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.35);
-  z-index: 0;
-}
-
 .login-box {
   position: relative;
   z-index: 1;
@@ -105,7 +94,7 @@
   text-align: center;
   margin-top: 1rem;
   font-size: 0.9rem;
-  color: #3890ed;
+  color: #ffffff;
   cursor: pointer;
 }
 
