--- a/src/pages/About/AboutPage.css
+++ b/src/pages/About/AboutPage.css
@@ -113,7 +113,7 @@
   font-size: 36px;
   margin-bottom: 40px;
   font-weight: bold;
-  color: #333;
+  color: #ffffff;
 }
 
 /* ========== Team Grid ========== */
