--- a/src/pages/Login/LoginPage.css
+++ b/src/pages/Login/LoginPage.css
@@ -3,7 +3,9 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  width: 100vw;
   background: url('../../assets/login-bg.jpg');
+  background-size: cover;;
   position: relative;
 }
 
